(library
 (name abbot_other_examples)
 (public_name abbot.other_examples)
 (preprocess (pps ppx_jane))
 (libraries
  abbot_runtime
  core))

(rule
 (targets
  stlc_intf.ml
  stlc.mli
  stlc.ml
  stlc.sig
  stlc.sml)
 (deps
  (:abbot ../../bin/main.exe)
  (:example stlc.abt))
 (action
  (progn
   (run %{abbot} ocaml %{example})
   (run %{abbot} sml %{example}))))
