(library
 (name abbot_other_examples)
 (public_name abbot.other_examples)
 (preprocess (pps ppx_jane))
 (libraries
  abbot_runtime
  core))

(rule
 (targets
  fpcpat_intf.ml
  fpcpat.mli
  fpcpat.ml
  fpcpat.sig
  fpcpat.sml)
 (deps
  (:abbot ../../bin/main.exe)
  (:example fpcpat.abt))
 (action
  (progn
   (run %{abbot} ocaml %{example})
   (run %{abbot} sml %{example}))))

(rule
 (targets
  polarized_intf.ml
  polarized.mli
  polarized.ml
  polarized.sig
  polarized.sml)
 (deps
  (:abbot ../../bin/main.exe)
  (:example polarized.abt))
 (action
  (progn
   (run %{abbot} ocaml %{example})
   (run %{abbot} sml %{example}))))

(rule
 (targets
  stlc_intf.ml
  stlc.mli
  stlc.ml
  stlc.sig
  stlc.sml)
 (deps
  (:abbot ../../bin/main.exe)
  (:example stlc.abt))
 (action
  (progn
   (run %{abbot} ocaml %{example})
   (run %{abbot} sml %{example}))))
